--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "main": "index.js",
   "scripts": {
     "start": "./bin/cli.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/gulp/bin/gulp.js test"
   },
   "repository": {
     "type": "git",
@@ -30,6 +30,7 @@
   },
   "devDependencies": {
     "gulp": "^3.8.11",
-    "gulp-jshint": "^1.9.4"
+    "gulp-jshint": "^1.9.4",
+    "gulp-mocha": "^2.0.0"
   }
 }
